--- a/.github/workflows/ivd-cloud-backup.yml
+++ b/.github/workflows/ivd-cloud-backup.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install deps
         run: |
           python3 -m pip install --quiet --upgrade pip
-          python3 -m pip install --quiet pyyaml
+          python3 -m pip install --quiet -r requirements.txt
 
       - name: Validate rules profiles
         run: |
