feat(db): add postgres compose setup and alembic/sqlalchemy migration foundation

--- a/.docker.env.example
+++ b/.docker.env.example
@@ -4,3 +4,17 @@ ADMIN_PASS=change-me
 
 # Optional: digest send target when scheduler runs with send=true.
 # TO_EMAIL=you@example.com
+
+# --- DB runtime mode ---
+# PostgreSQL (compose service: db)
+POSTGRES_DB=ivd
+POSTGRES_USER=ivd
+POSTGRES_PASSWORD=ivd_dev_only_change_me
+
+# Dual-write gray mode (primary=PG, secondary=SQLite)
+DATABASE_URL=postgresql+psycopg://ivd:ivd_dev_only_change_me@db:5432/ivd
+DATABASE_URL_SECONDARY=sqlite:///data/rules.db
+DB_WRITE_MODE=dual
+DB_READ_MODE=shadow_compare
+# If dual-write enabled, strict=true means secondary write failure will fail request.
+DB_DUAL_STRICT=false
