--- a/rules/content_rules/legacy.yaml
+++ b/rules/content_rules/legacy.yaml
@@ -40,6 +40,14 @@ defaults:
     - 感染检测
     - 生殖与遗传检测
     - 其他
+  output_tracks:
+    enable_track_split: false
+  analysis_cache:
+    enable_analysis_cache: false
+    always_generate: true
+    prompt_version: v1
+    model: legacy-inline
+    asset_dir: artifacts/analysis
   region_filter:
     apac_min_share: 0.40
     china_min_share: 0.00
