--- a/rules/content_rules/legacy.yaml
+++ b/rules/content_rules/legacy.yaml
@@ -48,6 +48,28 @@ defaults:
     prompt_version: v1
     model: legacy-inline
     asset_dir: artifacts/analysis
+  source_policy:
+    enabled: true
+    min_trust_tier:
+      legacy: C
+      enhanced: B
+    exclude_domains: []
+    exclude_source_ids: []
+    drop_if_url_matches: []
+  evidence_policy:
+    require_evidence_for_core: false
+    min_snippet_chars: 80
+    degrade_if_missing: true
+  opportunity_index:
+    enabled: false
+    window_days: 7
+  frontier_policy:
+    require_diagnostic_anchor: false
+    drop_bio_general_without_diagnostic: false
+  evidence_policy:
+    require_evidence_for_core: false
+    min_snippet_chars: 80
+    degrade_if_missing: true
   region_filter:
     apac_min_share: 0.40
     china_min_share: 0.00
